fixed text-wrap on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,3 +6,10 @@
 .Header h1 {
     cursor: pointer;
 }
+
+@media screen and (max-width: 550px) {
+
+    .Header h1 {
+        font-size: 3rem;
+    }
+}
